--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@ frontend/node_modules/.cache/default-development/0.pack
 *.pack
 frontend/node_modules/.cache/default-development/index.pack
 frontend/node_modules/.cache/default-development/index.pack
+*.pack
+*.pack
