--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ frontend/node_modules/.cache/default-development/index.pack
 frontend/node_modules/.cache/default-development/index.pack
 *.pack
 *.pack
+frontend/node_modules/.cache/default-development/0.pack
+frontend/node_modules/.cache/default-development/index.pack
